{
  "version": 4,
  "terraform_version": "0.14.4",
  "serial": 198,
  "lineage": "db7f35bf-731b-103b-4adb-51649134e8a9",
  "resources": [
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb_rails-terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:202848614748:loadbalancer/app/production-alb-rails-terraform/7f98ddbd8a09fa83",
            "arn_suffix": "app/production-alb-rails-terraform/7f98ddbd8a09fa83",
            "dns_name": "production-alb-rails-terraform-184315511.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:202848614748:loadbalancer/app/production-alb-rails-terraform/7f98ddbd8a09fa83",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "production-alb-rails-terraform",
            "security_groups": [
              "sg-063c80b33d68df9f3",
              "sg-06b13efcf2d84cd41",
              "sg-0cc8bb8bb3629dc23"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-059f7ac3b0e044450"
              },
              {
                "subnet_id": "subnet-0edf8bbab1eb1bc2e"
              }
            ],
            "subnets": [
              "subnet-059f7ac3b0e044450",
              "subnet-0edf8bbab1eb1bc2e"
            ],
            "tags": {
              "Environment": "production",
              "Name": "production-alb-rails_terraform"
            },
            "vpc_id": "vpc-0f302f74d9d2527b6",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.ecs.aws_security_group.web_inbound_sg",
            "module.networking.aws_security_group.default",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc",
            "module.rds.aws_security_group.db_access_sg"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "rails_terraform1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:202848614748:listener/app/production-alb-rails-terraform/7f98ddbd8a09fa83/1d8991f904350197",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:202848614748:listener/app/production-alb-rails-terraform/7f98ddbd8a09fa83/1d8991f904350197",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:202848614748:loadbalancer/app/production-alb-rails-terraform/7f98ddbd8a09fa83",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.aws_alb.alb_rails-terraform",
            "module.ecs.aws_alb_target_group.alb_target_group",
            "module.ecs.aws_security_group.web_inbound_sg",
            "module.ecs.random_id.target_group_sufix",
            "module.networking.aws_security_group.default",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc",
            "module.rds.aws_security_group.db_access_sg"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "rails_terraform2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:202848614748:listener/app/production-alb-rails-terraform/7f98ddbd8a09fa83/04bab48f60dff451",
            "certificate_arn": "arn:aws:acm:us-east-1:202848614748:certificate/6794b513-c6b3-4269-9cad-97f6a42b3c65",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:202848614748:targetgroup/production-alb-target-group-22d3/0088911e64ddd006",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:202848614748:listener/app/production-alb-rails-terraform/7f98ddbd8a09fa83/04bab48f60dff451",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:202848614748:loadbalancer/app/production-alb-rails-terraform/7f98ddbd8a09fa83",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.aws_alb.alb_rails-terraform",
            "module.ecs.aws_alb_target_group.alb_target_group"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "alb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:202848614748:targetgroup/production-alb-target-group-22d3/0088911e64ddd006",
            "arn_suffix": "targetgroup/production-alb-target-group-22d3/0088911e64ddd006",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:202848614748:targetgroup/production-alb-target-group-22d3/0088911e64ddd006",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "production-alb-target-group-22d3",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0f302f74d9d2527b6"
          },
          "dependencies": [
            "module.ecs.random_id.target_group_sufix",
            "module.networking.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202848614748:security-group/sg-0b38eb4e7c8d4aadc",
            "description": "Allow egress from container",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b38eb4e7c8d4aadc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "production-ecs-service-sg",
            "name_prefix": "",
            "owner_id": "202848614748",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "production-ecs-service-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f302f74d9d2527b6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_inbound_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202848614748:security-group/sg-063c80b33d68df9f3",
            "description": "Allow HTTP from Anywhere into ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-063c80b33d68df9f3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "production-web-inbound-sg",
            "name_prefix": "",
            "owner_id": "202848614748",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "production-web-inbound-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f302f74d9d2527b6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-06a3e42bfb6865074",
            "domain": "vpc",
            "id": "eipalloc-08917808d57ce290e",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0a1cd33ea65f55172",
            "private_dns": "ip-10-0-1-117.ec2.internal",
            "private_ip": "10.0.1.117",
            "public_dns": "ec2-100-25-1-80.compute-1.amazonaws.com",
            "public_ip": "100.25.1.80",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.ig",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202848614748:internet-gateway/igw-0759f0a21ab60f444",
            "id": "igw-0759f0a21ab60f444",
            "owner_id": "202848614748",
            "tags": {
              "Environment": "production",
              "Name": "production-igw"
            },
            "vpc_id": "vpc-0f302f74d9d2527b6"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08917808d57ce290e",
            "id": "nat-01d401de67aa72da0",
            "network_interface_id": "eni-0a1cd33ea65f55172",
            "private_ip": "10.0.1.117",
            "public_ip": "100.25.1.80",
            "subnet_id": "subnet-0edf8bbab1eb1bc2e",
            "tags": {
              "Environment": "production",
              "Name": "production-us-east-1b-nat"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_internet_gateway.ig",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-08be0a5048398b5081080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-01d401de67aa72da0",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08be0a5048398b508",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_internet_gateway.ig",
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0759f0a21ab60f444",
            "id": "r-rtb-0e0f956ab5d39e8401080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e0f956ab5d39e840",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.ig",
            "module.networking.aws_route_table.public",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-08be0a5048398b508",
            "owner_id": "202848614748",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01d401de67aa72da0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "production-private-route-table"
            },
            "vpc_id": "vpc-0f302f74d9d2527b6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0e0f956ab5d39e840",
            "owner_id": "202848614748",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0759f0a21ab60f444",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "production-public-route-table"
            },
            "vpc_id": "vpc-0f302f74d9d2527b6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0172ade29e0c1a239",
            "route_table_id": "rtb-08be0a5048398b508",
            "subnet_id": "subnet-0f43c4ff2d97bb057"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02d77c21fb98c0ddf",
            "route_table_id": "rtb-08be0a5048398b508",
            "subnet_id": "subnet-0386bdae71e50485d"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02eac3c6c4a96b507",
            "route_table_id": "rtb-0e0f956ab5d39e840",
            "subnet_id": "subnet-0edf8bbab1eb1bc2e"
          },
          "dependencies": [
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ee318a913282053c",
            "route_table_id": "rtb-0e0f956ab5d39e840",
            "subnet_id": "subnet-059f7ac3b0e044450"
          },
          "dependencies": [
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202848614748:security-group/sg-0cc8bb8bb3629dc23",
            "description": "Default security group to allow inbound/outbound from the VPC",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "id": "sg-0cc8bb8bb3629dc23",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "production-default-sg",
            "name_prefix": "",
            "owner_id": "202848614748",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f302f74d9d2527b6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202848614748:subnet/subnet-0f43c4ff2d97bb057",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "id": "subnet-0f43c4ff2d97bb057",
            "map_public_ip_on_launch": false,
            "owner_id": "202848614748",
            "tags": {
              "Environment": "production",
              "Name": "production-us-east-1a-private-subnet"
            },
            "vpc_id": "vpc-0f302f74d9d2527b6"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202848614748:subnet/subnet-0386bdae71e50485d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.20.0/24",
            "id": "subnet-0386bdae71e50485d",
            "map_public_ip_on_launch": false,
            "owner_id": "202848614748",
            "tags": {
              "Environment": "production",
              "Name": "production-us-east-1b-private-subnet"
            },
            "vpc_id": "vpc-0f302f74d9d2527b6"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202848614748:subnet/subnet-0edf8bbab1eb1bc2e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0edf8bbab1eb1bc2e",
            "map_public_ip_on_launch": true,
            "owner_id": "202848614748",
            "tags": {
              "Environment": "production",
              "Name": "production-us-east-1a-public-subnet"
            },
            "vpc_id": "vpc-0f302f74d9d2527b6"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202848614748:subnet/subnet-059f7ac3b0e044450",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-059f7ac3b0e044450",
            "map_public_ip_on_launch": true,
            "owner_id": "202848614748",
            "tags": {
              "Environment": "production",
              "Name": "production-us-east-1b-public-subnet"
            },
            "vpc_id": "vpc-0f302f74d9d2527b6"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202848614748:vpc/vpc-0f302f74d9d2527b6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c5dcb047cb94fe2f",
            "default_route_table_id": "rtb-006c1167a4837a9ea",
            "default_security_group_id": "sg-007ab619e1512ef4a",
            "dhcp_options_id": "dopt-68da5612",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0f302f74d9d2527b6",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-006c1167a4837a9ea",
            "owner_id": "202848614748",
            "tags": {
              "Environment": "production",
              "Name": "production-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_access_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202848614748:security-group/sg-06b13efcf2d84cd41",
            "description": "Allow access to RDS",
            "egress": [],
            "id": "sg-06b13efcf2d84cd41",
            "ingress": [],
            "name": "production-db-access-sg",
            "name_prefix": "",
            "owner_id": "202848614748",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "production-db-access-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f302f74d9d2527b6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202848614748:security-group/sg-047602ca8def2d6fe",
            "description": "production Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-047602ca8def2d6fe",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06b13efcf2d84cd41"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "production-rds-sg",
            "name_prefix": "",
            "owner_id": "202848614748",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "production-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f302f74d9d2527b6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc",
            "module.rds.aws_security_group.db_access_sg"
          ]
        }
      ]
    }
  ]
}